# hello-vulkan

./: .gitignore  Makefile.am  README.md  configure.ac
src/: Makefile.am  console.c  console.h  glfw-controls.c  glfw-controls.h  main.c  maths.c  maths.h  scene.h  vulkan-draw.c  vulkan-draw.h  vulkan-lifecycle.c  vulkan-lifecycle.h  vulkan-types.h
src/shaders/: Makefile.am  shader.frag  shader.vert
textures/: Makefile.am  brick.tex  normal.tex
